@@ -1,3 +1,11 @@
+2006-04-03  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* src/ephy-net-monitor.c:
+
+	Improve the current code (less complex) and add a timeouted call
+	to NetworkManager when requesting network status.
+	Bug 330479.
+
 2006-04-03  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/bookmarks/ephy-bookmarks-editor.c:
